# DLL

./: .gitignore  CMakeLists.txt  README.md  build.gradle  settings.gradle  snkr.cpp  snkr.h
gradle/wrapper/: gradle-wrapper.properties
logger/: logger.cpp  logger.h
snkr/: snkr.cpp  snkr.h
src/main/java/xyz/snaker/natives/: SnakerNatives.java
src/main/resources/: xyz_snaker_natives_SnakerNatives.cpp  xyz_snaker_natives_SnakerNatives.h
